--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
   <body>
     <header>
-      <a href="index.html" id="logo">
+      <a href="index" id="logo">
         <h1>.0.1</h1>
         <h2>s t u d i o s</h2>
       </a>
       <nav>
         <ul>
-          <li><a href="index.html" class="selected">Portfolio</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="index" class="selected">Portfolio</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="contact">Contact</a></li>
         </ul>
       </nav>
     </header>
