compressed profile pic added

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     </header>
     <div id="wrapper">
       <section>
-        <img src="img/paddington.jpg" alt="Photograph of Joshua Saunders" class="profile-photo">
+        <img src="img/paddington_pusheen.jpg" alt="Photograph of Paddington Bear and Pusheen" class="profile-photo">
         <h3>About</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec semper pretium sapien, vel molestie sapien vehicula nec. Vestibulum varius velit eros. Phasellus eu elit suscipit, convallis urna et, volutpat arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac ligula dictum purus vestibulum aliquam vitae nec enim. Sed vulputate efficitur felis, sit amet porttitor dolor hendrerit vel.
