--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <div id="wrapper">
       <section id="primary">
         <h3>General Information</h3>
-        <p>I am not currently looking for new design work, but I am available for speaking gigs and similar engagements. If you have any questions, please don't hesitate to contact me.
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec semper pretium sapien, vel molestie sapien vehicula nec. Vestibulum varius velit eros. Phasellus eu elit suscipit, convallis urna et, volutpat arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
         <p>Please only use phone contact for urgent inquiries. Otherwise, Twitter and e-mail is the best way to reach me.
         </p>
