--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,7 @@
         <h3>General Information</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec semper pretium sapien, vel molestie sapien vehicula nec. Vestibulum varius velit eros. Phasellus eu elit suscipit, convallis urna et, volutpat arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
-        <p>Please only use phone contact for urgent inquiries. Otherwise, Twitter and e-mail is the best way to reach me.
-        </p>
+        <p>Twitter and e-mail are the best ways to reach me.</p>
       </section>
       <section id="secondary">
         <h3>Contact Details</h3>
