--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <img src="img/paddington.jpg" alt="Photograph of Paddington Bear and Pusheen" class="profile-photo">
         <h3>About</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec semper pretium sapien, vel molestie sapien vehicula nec. Vestibulum varius velit eros. Phasellus eu elit suscipit, convallis urna et, volutpat arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac ligula dictum purus vestibulum aliquam vitae nec enim. Sed vulputate efficitur felis, sit amet porttitor dolor hendrerit vel.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec semper pretium sapien, vel molostie sapien vehicula nec. Vestibulum varius velit eros. Phasellus eu elit suscipit, convallis urna et, volutpat arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac ligula dictum purus vestibulum aliquam vitae nec enim. Sed vulputate efficitur felis, sit amet porttitor dolor hendrerit vel.
         </p>
         <p>
           If you'd like to follow us on Twitter, find us <a href="http://twitter.com/dotzerodotone">@dotzerodotone</a>
