--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <footer>
         <p>&copy; 2017 .0.1 | studios</P>
         <a href="http://twitter.com/dotzerodotone"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://facebook.com/dotzerdotone"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <a href="http://facebook.com/dotzerodotone"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
       </footer>
     </div>
   </body>
