new styles added

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <body>
     <header>
       <a href="index" id="logo">
-        <h1>.0.1</h1>
-        <h2>studios</h2>
+        <h1><span class='logo_lightpink'>.</span>0<span class='logo_lightpink'>.</span>1</h1>
+        <h2><span class='logo_purple'>studios</span></h2>
+        <!-- <h2>studios</h2> -->
       </a>
       <nav>
         <ul>
