--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
   <body>
     <header>
       <a href="index" id="logo">
-        <h1>.0.1</h1>
-        <h2>studios</h2>
+        <h1><span class='logo_lightpink'>.</span>0<span class='logo_lightpink'>.</span>1</h1>
+        <h2><span class='logo_purple'>studios</span></h2>
       </a>
       <nav>
         <ul>
