nav selected color changed

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <header>
       <a href="index" id="logo">
         <h1><span class='logo_lightpink'>.</span>0<span class='logo_lightpink'>.</span>1</h1>
-        <h2><span class='logo_purple'>studios</span></h2>
+        <h2><span class='logo_blue'>studios</span></h2>
       </a>
       <nav>
         <ul>
