--- a/about.html
+++ b/about.html
@@ -21,30 +21,45 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index">Portfolio</a></li>
+          <li><a href="index">Welcome</a></li>
           <li><a href="about" class="selected">About</a></li>
           <li><a href="contact">Contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="wrapper">
-      <section>
-        <img src="img/paddington.jpg" alt="Photograph of Paddington Bear and Pusheen" class="profile-photo">
-        <h3>About</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec semper pretium sapien, vel molostie sapien vehicula nec. Vestibulum varius velit eros. Phasellus eu elit suscipit, convallis urna et, volutpat arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac ligula dictum purus vestibulum aliquam vitae nec enim. Sed vulputate efficitur felis, sit amet porttitor dolor hendrerit vel.
-        </p>
-        <p>
-          If you'd like to follow us on Twitter, find us <a href="http://twitter.com/dotzerodotone">@dotzerodotone</a>
-        </p>
-      </section>
-      <!-- Footer: Copyright | Site directory | Soc media -->
-      <footer>
-        <p>&copy; 2017 .0.1 | studios</P>
-        <a href="http://twitter.com/dotzerodotone"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://facebook.com/dotzerodotone"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-      </footer>
+        <section id="primary_about">
+          <img src="img/j_saunders.jpg" alt="Photograph of Josh" class="profile-photo">
+        </section>
+        <section id="secondary_about">
+          <h3>Sometimes all you want to know is... how do I make an impact?</h3>
+          <p>
+            How do you ensure what your doing is useful. That answer, comes from your customers. They can tell you who they are, what they want and how you can provide a better service for them.
+          </p>
+          <p>
+            With this in mind, it is our role here at Dot Zero Dot One Studios to communicate and present innovative solutions to influence and support your company's objectives.
+          </p>
+          <p>
+            A responsibility to coordinate and execute unique and strategic approaches centred on you and your customer. Ensuring your physical and online presence are organized and maintained to the highest standard – with a commitment to drive projects from concept to completion with creativity and momentum, where both customer and service can be met and inspired.
+          </p>
+          <p>
+            Thank you for stopping by, let’s make something great together.
+          </p>
+          <p>
+            Josh Saunders
+          </p>
+          <p>
+            If you'd like to follow us on Twitter, find us <a href="http://twitter.com/dotzerodotone">@dotzerodotone</a>
+          </p>
+        </section>
+        <!-- Footer: Copyright | Site directory | Soc media -->
+          <div id="footer">
+            <p>&copy; 2017 .0.1 | studios</P>
+            <a href="http://twitter.com/dotzerodotone"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+            <a href="http://facebook.com/dotzerodotone"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+          </div>
     </div>
+
   </body>
 
 
