--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index">Portfolio</a></li>
+          <li><a href="index">Welcome</a></li>
           <li><a href="about">About</a></li>
           <li><a href="contact" class="selected">Contact</a></li>
         </ul>
@@ -30,24 +30,27 @@
     <div id="wrapper">
       <section id="primary">
         <h3>General Information</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec semper pretium sapien, vel molestie sapien vehicula nec. Vestibulum varius velit eros. Phasellus eu elit suscipit, convallis urna et, volutpat arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        <p>
+          Available Monday-Friday – 9:00 AM - 5:00 PM (MDT)
         </p>
-        <p>Twitter and e-mail are the best ways to reach me.</p>
+        <p>Outside of office hours, e-mail and we'll reply soon as possible.</p>
       </section>
       <section id="secondary">
         <h3>Contact Details</h3>
         <ul class="contact-info">
-          <li class="phone"><a href="tel:555-6425">555-6425</a></li>
-          <li class="mail"><a href="mail-to:dotzerodotone@gmail.com">dotzerodotone@gmail.com</a></li>
+          <li class="phone"><a href="tel:(403)710-7043">(403) 710-7043</a></li>
+          <li class="mail"><a href="mail-to:contact@dotzerodotone.com">contact@dotzerodotone.com</a></li>
           <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=dotzerodotone">@dotzerodotone</a></li>
         </ul>
       </section>
       <!-- Footer: Copyright | Site directory | Soc media -->
-      <footer>
-        <p>&copy; 2017 .0.1 | studios</P>
-        <a href="http://twitter.com/dotzerodotone"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://facebook.com/dotzerodotone"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-      </footer>
+      <div>
+        <footer>
+          <p>&copy; 2017 .0.1 | studios</P>
+          <a href="http://twitter.com/dotzerodotone"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+          <a href="http://facebook.com/dotzerodotone"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        </footer>
+      </div>
     </div>
   </body>
 
