--- a/index.html
+++ b/index.html
@@ -22,52 +22,22 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index" class="selected">Portfolio</a></li>
+          <li><a href="index" class="selected">Welcome</a></li>
           <li><a href="about">About</a></li>
           <li><a href="contact">Contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="wrapper">
-      <section>
-        <ul id="gallery">
-          <li>
-            <a href="img/numbers-01.jpg">
-              <img src="img/numbers-01.jpg" alt=""/>
-              <p>Experimentation with color and texture.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-02.jpg">
-              <img src="img/numbers-02.jpg" alt=""/>
-              <p>Playing with blending modes in photoshop.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-06.jpg">
-              <img src="img/numbers-06.jpg" alt=""/>
-              <p>Trying to create and 80's style of glow.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-09.jpg">
-              <img src="img/numbers-09.jpg" alt=""/>
-              <p>Drips created using photoshop brushes.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-12.jpg">
-              <img src="img/numbers-12.jpg" alt=""/>
-              <p>Creating shapes using repetition.</p>
-            </a>
-          </li>
-        </ul>
+      <section id="welcome_pink">
+        <a href="about"><img src="img/pink.jpg" alt="opaque pink and blue graphic" class="pink-photo"/>
       </section>
-      <!-- Footer: Copyright | Site directory | Soc media -->
+      <section id="welcome_logo" class="welcome_logo">
+        <h1><span class='logo_lightpink'>Dot</span>Zero<span class='logo_lightpink'>Dot</span>One</h1>
+        <h3><span class='logo_blue'>studios</span></h3>
+      </section>
       <footer>
         <p>&copy; 2017 .0.1 | studios</P>
-        <a href="http://twitter.com/dotzerodotone"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://facebook.com/dotzerodotone"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
       </footer>
     </div>
   </body>
