--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <div id="wrapper">
       <section id="welcome_pink">
-        <a href="about"><img src="img/pink.jpg" alt="opaque pink and blue graphic" class="pink-photo"/>
+        <a href="about"><img src="img/pink.JPG" alt="opaque pink and blue graphic" class="pink-photo"/>
       </section>
       <section id="welcome_logo" class="welcome_logo">
         <h1><span class='logo_lightpink'>Dot</span>Zero<span class='logo_lightpink'>Dot</span>One</h1>
