--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <section id="secondary_about">
           <h3>Sometimes all you want to know is... how do I make an impact?</h3>
           <p>
-            How do you ensure what your doing is useful. That answer, comes from your customers. They can tell you who they are, what they want and how you can provide a better service for them.
+            How do you ensure what you're doing is useful. That answer, comes from your customers. They can tell you who they are, what they want and how you can provide a better service for them.
           </p>
           <p>
             With this in mind, it is our role here at Dot Zero Dot One Studios to communicate and present innovative solutions to influence and support your company's objectives.
